[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ali May", email = "2628839532@qq.com"},
]
dependencies = ["fastapi>=0.116.1", "uvicorn[standard]>=0.35.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
